force-app/main/default/objects/Acknowledgment_of_Bus_In_Service__c/Acknowledgment_of_Bus_In_Service__c.object-meta.xml
<CustomObject>
    <label>Acknowledgment of Bus In-Service</label>
    <nameField>
        <displayFormat>ABI-{0000}</displayFormat>
        <label>Acknowledgment of Bus In-Service Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Acknowledgment of Bus In-Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>