force-app/main/default/objects/Acknowledgment_of_Bus_In_Service__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Acknowledgment of Bus In-Services</relationshipLabel>
    <relationshipName>Acknowledgment_of_Bus_In_Services</relationshipName>
    <type>Lookup</type>
</CustomField>