force-app/main/default/objects/Acknowledgment_of_Bus_In_Service__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <label>Approved By:</label>
    <length>30</length>
    <type>Text</type>
</CustomField>