force-app/main/default/objects/Acknowledgment_of_Bus_In_Service__c/fields/Bus__c.field-meta.xml
<CustomField>
    <fullName>Bus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bus</label>
    <referenceTo>Bus__c</referenceTo>
    <relationshipLabel>Acknowledgment of Bus In-Services</relationshipLabel>
    <relationshipName>Acknowledgment_of_Bus_In_Services</relationshipName>
    <type>Lookup</type>
</CustomField>