force-app/main/default/objects/Acknowledgment_of_Bus_In_Service__c/fields/Bus_Number__c.field-meta.xml
<CustomField>
    <fullName>Bus_Number__c</fullName>
    <formula>Bus__r.Customer_Bus_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Customer Bus Number from the Bus Object</inlineHelpText>
    <label>Bus Number</label>
    <type>Text</type>
</CustomField>