force-app/main/default/objects/Acknowledgment_of_Bus_In_Service__c/fields/Bus_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Bus_Work_Order__c</fullName>
    <description>This is to get all necessary information to get the Bus In service form for a completed Bus</description>
    <label>Service Request</label>
    <referenceTo>Bus_Work_Order__c</referenceTo>
    <relationshipLabel>Acknowledgment of Bus In-Services</relationshipLabel>
    <relationshipName>Acknowledgment_of_Bus_In_Services</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>