force-app/main/default/objects/Acknowledgment_of_Bus_In_Service__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Acknowledgment of Bus In-Services</relationshipLabel>
    <relationshipName>Acknowledgment_of_Bus_In_Services</relationshipName>
    <type>Lookup</type>
</CustomField>