force-app/main/default/objects/Acknowledgment_of_Bus_In_Service__c/fields/Date_PDI_is_100_completed__c.field-meta.xml
<CustomField>
    <fullName>Date_PDI_is_100_completed__c</fullName>
    <inlineHelpText>PDI Completion Date</inlineHelpText>
    <label>Date PDI is 100% completed</label>
    <type>Date</type>
</CustomField>