force-app/main/default/objects/Acknowledgment_of_Bus_In_Service__c/fields/FSR__c.field-meta.xml
<CustomField>
    <fullName>FSR__c</fullName>
    <formula>Account__r.Field_Service_Rep__r.FirstName  &amp; &quot; &quot;  &amp;  Account__r.Field_Service_Rep__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FSR</label>
    <type>Text</type>
</CustomField>