force-app/main/default/objects/Acknowledgment_of_Bus_In_Service__c/fields/In_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>In_Service_Date__c</fullName>
    <description>The customer accepts bus for In-service start date</description>
    <inlineHelpText>In Service Date</inlineHelpText>
    <label>Date Bus is placed into Service</label>
    <type>Date</type>
</CustomField>