force-app/main/default/objects/Acknowledgment_of_Bus_In_Service__c/fields/PDI_Owner_AR__c.field-meta.xml
<CustomField>
    <fullName>PDI_Owner_AR__c</fullName>
    <label>PDI Owner(AR)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>