force-app/main/default/objects/Acknowledgment_of_Bus_In_Service__c/fields/VIN_Number__c.field-meta.xml
<CustomField>
    <fullName>VIN_Number__c</fullName>
    <formula>Bus_Work_Order__r.Bus__r.VIN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIN Number</label>
    <type>Text</type>
</CustomField>